objects/Module_Migration__c/Module_Migration__c.object-meta.xml
<CustomObject>
    <description>Module and Option Migration objecy</description>
    <label>Module Migration</label>
    <nameField>
        <displayFormat>ModuleMigration-{0000000}</displayFormat>
        <label>Module Migration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Module Migrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>