objects/Module_Migration__c/fields/AEM_Solution__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AEM Solution</description>
    <label>AEM Solution</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Module Migrations</relationshipLabel>
    <relationshipName>Module_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>