objects/Module_Migration__c/fields/Allocation_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Allocation_List_Price__c</fullName>
    <description>Allocation List Price</description>
    <inlineHelpText>Subscription List Price / Prorate Multiplier.</inlineHelpText>
    <label>Allocation List Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>