objects/Module_Migration__c/fields/Allocation_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Net_Price__c</fullName>
    <description>Allocation Net Price</description>
    <inlineHelpText>Subscription Net Price / Prorate Multiplier.</inlineHelpText>
    <label>Allocation Net Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>