objects/Module_Migration__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <description>Allocation Percent</description>
    <inlineHelpText>Attribution Percentage from the Product Module.</inlineHelpText>
    <label>Allocation Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>