objects/Module_Migration__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <formula>Subscription_Migration__r.Contract__r.ContractNumber</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>