objects/Module_Migration__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <description>ContractId</description>
    <formula>CASESAFEID(Subscription_Migration__r.Contract__r.Id)</formula>
    <label>ContractId</label>
    <type>Text</type>
</CustomField>