objects/Module_Migration__c/fields/Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>Manual_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual Entry</description>
    <label>Manual Entry</label>
    <type>Checkbox</type>
</CustomField>