objects/Module_Migration__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <description>Module Name</description>
    <label>Module Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>