objects/Module_Migration__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>OportunityId</description>
    <formula>CASESAFEID(Subscription_Migration__r.Opportunity__r.Id)</formula>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>