objects/Module_Migration__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Module Migrations (Product)</relationshipLabel>
    <relationshipName>Module_Migrations1</relationshipName>
    <type>Lookup</type>
</CustomField>