objects/Module_Migration__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Product Type</description>
    <formula>Text(Product__r.Product_Type__c)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>