objects/Module_Migration__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>(Account) Segment</description>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>