objects/Module_Migration__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Module or Product Option</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Option</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>