objects/Module_Migration__c/fields/Subscription_Migration__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Migration__c</fullName>
    <description>Subscription Migration</description>
    <label>Subscription Migration</label>
    <referenceTo>Subscription_Migration__c</referenceTo>
    <relationshipLabel>Module Migrations</relationshipLabel>
    <relationshipName>Module_Migrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>