objects/Module_Migration__c/listViews/Search_by_Contract_Number.listView-meta.xml
<ListView>
    <fullName>Search_by_Contract_Number</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>AEM_Product_Group__c</columns>
    <columns>AEM_Solution__c</columns>
    <columns>Module_Name__c</columns>
    <columns>Allocation_Percent__c</columns>
    <columns>Allocation_List_Price__c</columns>
    <columns>Allocation_Net_Price__c</columns>
    <columns>Manual_Entry__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Number__c</field>
        <operation>equals</operation>
        <value>00125648</value>
    </filters>
    <label>Search by Contract Number</label>
</ListView>